# terminalbasic

./: .gitignore  .hgignore  ChangeLog  Makefile.am  Makefile.am.terminal-basic  README  README.md  README.pc  README.sketch  configure.ac  make_autotools.sh  make_sketch.sh  pgmspace.h
BASIC/: Makefile  amalgamation.cpp  amalgamation.d  eeprom.img  fibonacci.img  main.cpp  neuton.img  version
BASIC/docs/: UML.dia  UM_F1.dia  developer_manual.fodt  manual.fodt  manual.odt  manual_ru.fodt  user_manual.fodt
BASIC/include/: HALProxyStream.hpp  HAL_arduino.h  HAL_avr8.h  HAL_esp32.h  HAL_linux.h  HAL_pc.h  HAL_sdl.h  TVoutPrint.hpp  _HAL_pc.h  basic.hpp  basic_arduinoio.hpp  basic_avr8io.hpp  basic_common.hpp  basic_config.hpp  basic_dataparser.hpp  basic_exteeprom.hpp  basic_extmemfs.hpp  basic_functionblock.cpp  basic_functionblock.hpp  basic_gfx.hpp  basic_internalfuncs.hpp  basic_interpreter.hpp  basic_interpreter_program.hpp  basic_lexer.hpp  basic_math.cpp  basic_math.hpp  basic_parser.hpp  basic_parser_value.hpp  basic_program.hpp  basic_sdfs.cpp  basic_sdfs.hpp  basic_task.hpp  config.hpp  config_arduino.hpp  config_linux.hpp  lexer.hpp  parser.hpp  test_module.hpp  tvoutprint.hpp  version.h
BASIC/nbproject/: Makefile-Arduino_DUE.mk  Makefile-Arduino_UNO.mk  Makefile-Arduino_mega2560.mk  Makefile-Arduino_mega2560_mainframe.mk  Makefile-Arduino_mega2560_tvout.mk  Makefile-Arduino_nano168.mk  Makefile-Arduino_nano168p.mk  Makefile-Arduino_nano328.mk  Makefile-Arduino_pro328.mk  Makefile-Atmega1284.mk  Makefile-Atmega_128.mk  Makefile-Atmega_128a.mk  Makefile-Copy_of_Arduino_UNO.mk  Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Arduino_UNO.bash  Package-Arduino_mega2560.bash  Package-Arduino_mega2560_mainframe.bash  Package-Arduino_nano328.bash  Package-Atmega_128.bash  Package-Atmega_128a.bash  Package-Copy_of_Arduino_UNO.bash  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
BASIC/src/: HALProxyStream.cpp  HAL_arduino.cpp  HAL_arduino_AVR8.cpp  HAL_avr8.c  HAL_avr8.cpp  HAL_esp32.cpp  HAL_esp32_odroidgo.cpp  HAL_esp8266.cpp  HAL_linux.c  HAL_mingw32.c  HAL_pc.c  HAL_posix.c  HAL_sam.cpp  HAL_sdl.c  TVoutPrint.cpp  basic.cpp  basic_arduinoio.cpp  basic_common.cpp  basic_dataparser.cpp  basic_exteeprom.cpp  basic_extmemfs.cpp  basic_functionblock.cpp  basic_gfx.cpp  basic_gfx_sdl.cpp  basic_gfx_serial.cpp  basic_gfx_tvout.cpp  basic_gfx_utft.cpp  basic_internalfuncs.cpp  basic_interpreter.cpp  basic_interpreter_matrix.cpp  basic_interpreter_program.cpp  basic_interpreterw.cpp  basic_lexer.cpp  basic_lexerw.cpp  basic_math.cpp  basic_parser.cpp  basic_parser_value.cpp  basic_parserw.cpp  basic_program.cpp  basic_sdfs.cpp  (+11 more)
BASIC/tests/: TableTest.cpp
TVoutEx/: TVoutEx.cpp  TVoutEx.h  VideGen.cpp  VideoGen.h  video_gen.cpp
TVoutEx/spec/: AsmMacros.h  asm_macros.h  hardware_setup.h
UTFTTest/: Makefile
UTFTTest/include/: entry.cpp  version.h
UTFTTest/nbproject/: Makefile-Arduino_UNO.mk  Makefile-Arduino_mega2560.mk  (+16 more)
arduinoext/: Makefile
configtool/: configtool.pro  intropage.ui  main.cpp  tbc_application.cpp  tbc_application.hpp  tbc_intropage.cpp  tbc_intropage.hpp
libarduino/: Makefile
libarduino-cp/: Makefile
(+147 files in other folders)
