AUTOMAKE_OPTIONS = foreign

#
# Subdirectories in which more makefiles can be found
#
SUBDIRS = terminalbasic

#
# List of data files in this directory that should be included with a tkgate distribution.
#
#dist_pkgdata_DATA = site-preferences

#
# List of common documentation files
#
dist_doc_DATA = README COPYING ChangeLog
